Added list items and links

--- a/index.html
+++ b/index.html
@@ -16,9 +16,23 @@
     
     <br>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minima quod facilis voluptatum laboriosam suscipit officia, fuga fugit vel delectus sequi assumenda placeat obcaecati aliquid ex ea eum ipsum provident!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minima quod facilis voluptatum laboriosam suscipit officia, fuga fugit vel delectus sequi assumenda placeat obcaecati aliquid ex ea eum ipsum provident!
+<br>
+  I'm baby vape adaptogen XOXO retro, photo booth master cleanse godard four loko ramps williamsburg deep v subway tile disrupt knausgaard locavore. Bitters health goth raclette vinyl keytar. 90's 3 wolf moon lo-fi stumptown narwhal, plaid schlitz chicharrones forage copper mug. Ethical twee schlitz cardigan health goth cliche. Brooklyn cray cold-pressed before they sold out, mustache normcore organic gastropub enamel pin tacos.
+</p>
 
-<h3></h3>
+<h2>Contact Info</h2>
+
+<ul>
+    <li>
+        <strong>Email:</strong><a href= "mailto:Rexgflores@gmail.com">Rexgflores@gmail.com</a>
+    </li>
+    <li>
+        <strong>GitHub</strong><a href="https://github.com/Tyrannofloresrex" target: _blank>Tyrannofloresrex</a>
+    </li>
+    <li>
+        <strong>Portfolio</strong><a href= "#" target: _blank>Coming Soon!</a>
+    </li>
 
 </body>
 </html>
